src/test/deca/context/valid/simple-declare-string.deca
// Description:
//    déclare une string
//
// Resultats:
//    //
//
// Historique:
//    cree le 06/01/2023

{
    string i;
}